--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@
  body{
     min-height: 93vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/bck.png);
+    background-color:#fff;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -22,16 +22,12 @@
     width: 330px;
     padding: 2rem 1rem;
     margin: 50px auto;
-    background-color:#fff;
+    background-color:#231e1e17;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0,1);
  }
- h1{
-    font-size: 2rem;
-    color: black;
-    margin-bottom: 1.2rem;
- }
+
 
  form input{
     width: 92%;
