--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@
 .nav-links{
     flex: 1;
     text-align: right;
-    
-    
 }
+
 .nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+    /* margin-top: 10px ; */
 }
 .nav-links ul li a{
     color: #fff;
@@ -170,6 +170,67 @@ h3{
     margin: 10px 0;
 }
 
+h4{
+    text-align: center;
+    font-weight: 600;
+    margin: -50px 0;
+}
+
+.layer h4{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left:50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer button{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left:50%;
+    transform: translateX(-50%);
+    position: absolute;
+    background-color: transparent;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer:hover button{
+    bottom: 49%;
+    background-color: transparent;
+    opacity: 1;
+    margin: -125px 0;
+}
+
+.layer:hover h4{
+    bottom: 49%;
+    opacity: 1;
+}
+
+.cos-btn{
+    display: inline-block;
+    text-decoration: none;
+    color:transparent;
+    border: 1px solid transparent;
+    padding: 12px 34px;
+    font-size: 13px;
+    background:  transparent;
+    cursor: pointer;
+
+}
+.cos-btn:hover{
+    transition: 1s;
+    color: aquamarine;
+}
+
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
@@ -193,6 +254,7 @@ h3{
 .campus-col{
     flex-basis: 32%;
     border-radius: 10px;
+    margin: auto;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
