--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@
 .nav-links{
     flex: 1;
     text-align: right;
+    
+    
 }
-
 .nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
-    /* margin-top: 10px ; */
 }
 .nav-links ul li a{
     color: #fff;
@@ -170,67 +170,6 @@ h3{
     margin: 10px 0;
 }
 
-h4{
-    text-align: center;
-    font-weight: 600;
-    margin: -50px 0;
-}
-
-.layer h4{
-    width: 100%;
-    font-weight: 500;
-    color: #fff;
-    font-size: 26px;
-    bottom: 0;
-    left:50%;
-    transform: translateX(-50%);
-    position: absolute;
-    opacity: 0;
-    transition: 0.5s;
-}
-
-.layer button{
-    width: 100%;
-    font-weight: 500;
-    color: #fff;
-    font-size: 26px;
-    bottom: 0;
-    left:50%;
-    transform: translateX(-50%);
-    position: absolute;
-    background-color: transparent;
-    opacity: 0;
-    transition: 0.5s;
-}
-
-.layer:hover button{
-    bottom: 49%;
-    background-color: transparent;
-    opacity: 1;
-    margin: -125px 0;
-}
-
-.layer:hover h4{
-    bottom: 49%;
-    opacity: 1;
-}
-
-.cos-btn{
-    display: inline-block;
-    text-decoration: none;
-    color:transparent;
-    border: 1px solid transparent;
-    padding: 12px 34px;
-    font-size: 13px;
-    background:  transparent;
-    cursor: pointer;
-
-}
-.cos-btn:hover{
-    transition: 1s;
-    color: aquamarine;
-}
-
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
@@ -254,7 +193,6 @@ h4{
 .campus-col{
     flex-basis: 32%;
     border-radius: 10px;
-    margin: auto;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
@@ -430,7 +368,7 @@ h4{
     background-size: cover;
     
     color: #fff;
-    position: relative;
+    
 
 }
 
@@ -526,3 +464,67 @@ h4{
     border: 1px solid green;
     box-sizing: border-box;
 }
+
+.small-container.cart-page {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.cart-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+th{
+    text-align: left;
+    padding: 5px;
+    color: #0f0c0c;
+    background: #e4e4e4;
+    font-weight: normal;
+}
+
+td{
+    padding: 10px 5px;
+}
+
+td input{
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+}
+
+td a{
+    color: #ff523b;
+    font-size: 12px;
+}
+
+td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.total-price{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.total-price table{
+    border-top: 3px solid #e4e4e4;
+    width: 100%;
+    max-width: 370px;
+}
+
+td:last-child{
+    text-align: right;
+}
+
+th:last-child{
+    text-align: right;
+}
+
