--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/bck.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(../images/bck.png);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -252,7 +252,7 @@ h4{
 }
 
 .campus-col{
-    flex-basis: 32%;
+    flex-basis: 40%;
     border-radius: 10px;
     margin: auto;
     margin-bottom: 30px;
@@ -262,7 +262,6 @@ h4{
 
 .campus-col img{
     width: 100%;
-    height: 400px;
     display: block;
     
 }
@@ -379,7 +378,7 @@ h4{
 .cta{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/banner2.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/bck.png);
     background-position:center;
     background-size: cover;
     border-radius: 10px;
@@ -425,7 +424,7 @@ h4{
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/bck.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../images/bck.png);
     background-position: center;
     background-size: cover;
     
