--- a/styles/meniu.css
+++ b/styles/meniu.css
@@ -23,14 +23,14 @@
 .nav-links{
     flex: 1;
     text-align: right;
-    
-    
 }
+
 .nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+    /* margin-top: 10px ; */
 }
 .nav-links ul li a{
     color: #fff;
@@ -53,33 +53,12 @@
 
 }
 
-.hero-btn{
-    display: inline-block;
-    text-decoration: none;
-    color:#fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 13px;
-    background:  transparent;
-    cursor: pointer;
-    margin-top: 1rem;
-
-}
-.hero-btn:hover{
-
-    border: 1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
-
-}
 nav .fa{
     display: none;
 }
 
 @media(max-width: 700px){
-    .text-box h1{
-        font-size: 20px;
-    }
+    
     .nav-links ul li{
         display: block;
        
@@ -139,6 +118,67 @@ h3{
     margin: 10px 0;
 }
 
+h4{
+    text-align: center;
+    font-weight: 600;
+    margin: -50px 0;
+}
+
+.layer h4{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left:50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer button{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left:50%;
+    transform: translateX(-50%);
+    position: absolute;
+    background-color: transparent;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer:hover button{
+    bottom: 49%;
+    background-color: transparent;
+    opacity: 1;
+    margin: -125px 0;
+}
+
+.layer:hover h4{
+    bottom: 49%;
+    opacity: 1;
+}
+
+.cos-btn{
+    display: inline-block;
+    text-decoration: none;
+    color:transparent;
+    border: 1px solid transparent;
+    padding: 12px 34px;
+    font-size: 13px;
+    background:  transparent;
+    cursor: pointer;
+
+}
+.cos-btn:hover{
+    transition: 1s;
+    color: aquamarine;
+}
+
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
@@ -148,6 +188,72 @@ h3{
         flex-direction: column;
     }
 }
+
+/*----- produse-----*/
+
+.produse{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px ;
+
+}
+
+.produse-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin: auto;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.produse-col img{
+    width: 100%;
+    height: 400px;
+    display: block;
+    
+}
+.layer{
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+.layer:hover{
+    background: rgba(226,0,0,0.7);
+}
+.layer h3{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left:50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+.layer:hover h3{
+    bottom: 49%;
+    opacity: 1;
+}
+
+
+@media(max-width: 700px){
+    .produse-col img{
+        width: 100%;
+        height: 60%;
+        display: block;
+        
+    }
+}
+
+
 
 /*----footer---*/
 
@@ -170,7 +276,6 @@ h3{
 }
 
 
-
 .sub-header{
     height: 50vh;
     width: 100%;
@@ -179,7 +284,7 @@ h3{
     background-size: cover;
     
     color: #fff;
-    
+    position: relative;
 
 }
 
@@ -190,78 +295,3 @@ h3{
 }
 
 
-.red-btn{
-    border: 1px solid #f44336;
-    background: transparent;
-    color: #f44336;
-}
-.red-btn:hover{
-    color:#fff;
-}
-
-
-
-
-
-
-
-
-
-    
-.contact-col{
-    flex-basis: 48%;
-    margin-bottom: 30px;
-}
-    
-
-
-
-.contact-col div h5{
-    font-size: 20px;
-    margin-bottom: 5px;
-    color: darkblue;
-    font-weight: 500;
-}
-
-.contact-col input, .contact-col textarea{
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 17px;
-    outline: none;
-    border: 1px solid green;
-    box-sizing: border-box;
-}
-.reservation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.bordered {
-    border-radius: 10px;
-    margin: auto;
-    display: block;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
-    height: auto;
-    width: 80%;
-    transition: all 0.2s ease-in-out;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); 
-  }
-  
-  .bordered:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-  }
-    
-  @media only screen and (max-width: 700px) {
-    .bordered {
-      text-align: center;
-      width : 90%;
-
-    }
-  }
-  
-  
-  
