--- a/styles/contact.css
+++ b/styles/contact.css
@@ -277,10 +277,13 @@ h4{
 
 .contact-col div p{
     padding: 0;
+    margin-top: 40px;
+
 }
 
 .contact-col div h5{
     font-size: 20px;
+    margin-top: 40px;
     margin-bottom: 5px;
     color: darkblue;
     font-weight: 500;
