--- a/styles/log.css
+++ b/styles/log.css
@@ -138,21 +138,25 @@ p{
  }
 
  button{
-    font-size: 1rem;
-    margin-top: 1.8rem;
-    padding: 10px 0;
-    border-radius: 20px;
-    outline: none;
-    border: none;
-    width: 90%;
-    color: #fff;
-    cursor: pointer;
-    background: rgb(17, 107,143);
- }
+   font-size: 1rem;
+   margin-top: 1.8rem;
+   padding: 10px 0;
+   border-radius: 20px;
+   outline: none;
+   border: none;
+   width: 90%;
+   color: #fff;
+   cursor: pointer;
+   background: #f44336;
+}
 
- button:hover{
-    background: rgb(17, 107,143);
- }
+
+button:hover{
+   background: #f44336;
+   transform: scale(1.05);
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+
+}
  
  input:focus{
     border: 1px solid rgb(192, 192, 192);
@@ -174,7 +178,7 @@ p{
  }
 
  .terms a{
-    color: rgb(17, 107, 143);
+    color:#f44336;
     text-decoration: none;
  }
 
@@ -186,7 +190,7 @@ p{
 
  .member a
  {
-    color: rgb(17, 107, 143);
+    color:#f44336;
     text-decoration: none;
 
  }
