--- a/styles/help.css
+++ b/styles/help.css
@@ -52,54 +52,16 @@
     width : 100%;
 
 }
-.text-box{
-    width: 90%;
-    color:#fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-.text-box h1{
-    font-size: 62px;
-}
-.text-box p{
-    margin: 10px 0 40px;
-    font-size: 14px;
-    color:#fff;
-}
-.hero-btn{
-    display: inline-block;
-    text-decoration: none;
-    color:#fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 13px;
-    background:  transparent;
-    cursor: pointer;
 
-}
-.hero-btn:hover{
 
-    border: 1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
-
-}
 nav .fa{
     display: none;
 }
 
-ul {
-  display: inline-block;
-  text-align: center;
-}
+
 
 @media(max-width: 700px){
-    .text-box h1{
-        font-size: 20px;
-    }
+    
     .nav-links ul li{
         display: block;
        
@@ -132,19 +94,12 @@ ul {
     }
 }
 
-/*----- course -----*/
-.course{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px ;
-    
-}
+
 h1{
     font-size: 36px;
     font-weight: 600;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 p{
     color:#777;
@@ -154,22 +109,7 @@ p{
     padding: 10px;
 }
 
-.row{
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
 
-}
-.course-col{
-    flex-basis: 31%;
-    background: #fff3f3;
-    border-radius: 10px ;
-    margin-bottom: 5%;
-    padding: 20px 12px;
-    box-sizing: border-box;
-    transition: 0.5s;
-
-}
 
 h3{
     text-align: center;
@@ -177,55 +117,7 @@ h3{
     margin: 10px 0;
 }
 
-h4{
-    text-align: center;
-    font-weight: 600;
-    margin: -50px 0;
-}
 
-.layer h4{
-    width: 100%;
-    font-weight: 500;
-    color: #fff;
-    font-size: 26px;
-    bottom: 0;
-    left:50%;
-    transform: translateX(-50%);
-    position: absolute;
-    opacity: 0;
-    transition: 0.5s;
-}
-
-.layer:hover h4{
-    bottom: 49%;
-    opacity: 1;
-}
-
-.cos-btn{
-    display: inline-block;
-    text-decoration: none;
-    color:transparent;
-    border: 1px solid transparent;
-    padding: 12px 34px;
-    font-size: 13px;
-    background:  transparent;
-    cursor: pointer;
-
-}
-.cos-btn:hover{
-    transition: 1s;
-    color: aquamarine;
-}
-
-.course-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-}
-
-@media(max-width: 700px){
-    .row{
-        flex-direction: column;
-    }
-}
 
 /*----- campus -----*/
 
@@ -281,32 +173,15 @@ h4{
     opacity: 1;
 }
 
-
-
-
-/*---cta---*/
-.cta{
-    margin: 100px auto;
-    width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/bck.png);
-    background-position:center;
-    background-size: cover;
-    border-radius: 10px;
-    text-align: center;
-    padding: 100px 0;
-}
-.cta h1{
-    color:#fff;
-    margin-bottom:40px;
-    padding: 0;
-
+  
+.campus ul li{
+    text-align: left; 
+    padding: 8px 12px;
+    position: relative;
+    margin-left: 17%;
+    
 }
 
-@media(max-width: 700px){
-    .cta h1{
-        font-size: 24px;
-    }
-}
 
 /*----footer---*/
 
@@ -347,16 +222,6 @@ h4{
     text-align: center;
     margin-top: 80px;
     
-}
-
-
-.red-btn{
-    border: 1px solid #f44336;
-    background: transparent;
-    color: #f44336;
-}
-.red-btn:hover{
-    color:#fff;
 }
 
 
