--- a/styles/home.css
+++ b/styles/home.css
@@ -380,7 +380,7 @@ h4{
 .cta{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/bck.png);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/reserv.png);
     background-position:center;
     background-size: cover;
     border-radius: 10px;
