--- a/styles/home.css
+++ b/styles/home.css
@@ -10,6 +10,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    color: #fff;
 }
 .nav{
     display: flex;
@@ -90,6 +91,7 @@
 nav .fa{
     display: none;
 }
+
 
 @media(max-width: 700px){
     .text-box h1{
