--- a/styles/about.css
+++ b/styles/about.css
@@ -176,3 +176,21 @@ p{
 .about-col p{
     padding: 15px 0 25px;
 }
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color:#242424;
+    border: 1px solid #242424;
+    padding: 12px 34px;
+    font-size: 13px;
+    background:  transparent;
+    cursor: pointer;
+
+}
+.hero-btn:hover{
+
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+
+}
